syntax = "proto3";
package cache_grpc;

service CacheRPC {
    rpc Get(GetRequest) returns (GetResponse);
    rpc Set(SetRequest) returns (SetResponse);
}

message GetRequest {
    string key = 1;
}

message GetResponse {
    optional bytes value = 1;
}

message SetRequest {
    string key = 1;
    bytes value = 2;
}

message SetResponse {
}
